# number_series

./: CMakeLists.txt  README.md  benchmark.cmake  bm_make_random.cpp  bm_number_series.cpp  main.cpp  make_random_bm.cpp  number_series.cpp  number_series.h  number_series.hpp  number_series_bm.cpp  number_series_test.cpp  number_series_wrap.h  number_series_wrap.hpp  number_series_wrap2.h  number_series_wrap2.hpp  number_series_wrap2_test.cpp  number_series_wrap3.h  number_series_wrap3_test.cpp  number_series_wrap_test.cpp  test_number_series.cpp  test_number_series_wrap.cpp  test_number_series_wrap2.cpp
.github/workflows/: build.yml
